clusters/staging/homelab/ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: flux.raoshahzaib.site
    external-dns.alpha.kubernetes.io/target:  243b7d7f-9308-4f01-9b5c-f764b4888b1f.cfargotunnel.com
  name: demo-wordpress
  namespace: wordpress
spec:
  rules:
  - host: flux.raoshahzaib.site
    http:
      paths:
      - backend:
          service:
            name: demo-wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
